features - typography for blockquotes and lists (ordered and unordered)

--- a/includes/_features/_typography.html
+++ b/includes/_features/_typography.html
@@ -1,5 +1,6 @@
 <a name="typography"></a>
-<article class="grid-24 alpha">
+<article class="grid-24">
+  
   <h2>Typography</h2>
   <p>______</p>
   
@@ -21,6 +22,69 @@
     <p class="text-small">Turpis mi volutpat justo, eu volutpat enim diam eget metus. Maecenas ornare tortor. Donec sed tellus eget sapien fringilla nonummy. Mauris a ante. Suspendisse quam sem, consequat at, commodo vitae, feugiat in, nunc. Morbi imperdiet augue quis tellus.</p>
     
     <p class="text-muted">Nam sit amet sem. Aliquam libero nisi, imperdiet at, tincidunt nec, gravida vehicula, nisl. Praesent mattis, massa quis luctus fermentum, turpis mi volutpat justo, eu volutpat enim diam eget metus. Maecenas ornare tortor. Donec sed tellus eget sapien fringilla nonummy. Mauris a ante. Suspendisse quam sem, consequat at, commodo vitae, feugiat in, nunc. Morbi imperdiet augue quis tellus.</p>
+    
   </div>
+
+
+  <div class="grid-24">
+    <h2>Blockquotes</h2>
+  </div>
+  
+  <div class="grid-12">
+    
+    <h3>Simple</h3>
+    <blockquote>
+      Nam sit amet sem. Aliquam libero nisi, imperdiet at, tincidunt nec, gravida vehicula, nisl. Praesent mattis, massa quis luctus fermentum, turpis mi volutpat justo, eu volutpat enim diam eget metus. Maecenas ornare tortor. Donec sed tellus eget sapien fringilla nonummy. Mauris a ante. Suspendisse quam sem, consequat at, commodo vitae, feugiat in, nunc. Morbi imperdiet augue quis tellus.
+    </blockquote>
+    
+    <h3>With By Line</h3>
+    <blockquote>
+      Nam sit amet sem. Aliquam libero nisi, imperdiet at, tincidunt nec, gravida vehicula, nisl. Praesent mattis, massa quis luctus fermentum, turpis mi volutpat justo, eu volutpat enim diam eget metus. Maecenas ornare tortor. Donec sed tellus eget sapien fringilla nonummy. Mauris a ante. Suspendisse quam sem, consequat at, commodo vitae, feugiat in, nunc. Morbi imperdiet augue quis tellus.
+      <span class="byline">Anonymous</span>
+    </blockquote>
+    
+  </div>
+
+  <div class="grid-12">
+    
+    <h3>With Quotes</h3>
+    <blockquote class="quote">
+      Nam sit amet sem. Aliquam libero nisi, imperdiet at, tincidunt nec, gravida vehicula, nisl. Praesent mattis, massa quis luctus fermentum, turpis mi volutpat justo, eu volutpat enim diam eget metus. Maecenas ornare tortor. Donec sed tellus eget sapien fringilla nonummy. Mauris a ante. Suspendisse quam sem, consequat at, commodo vitae, feugiat in, nunc. Morbi imperdiet augue quis tellus.
+    </blockquote>
+    
+    
+  </div>
+
+
+  <div class="grid-24">
+    <h2>Lists</h2>
+  </div>
+  
+  <div class="grid-12">
+    
+    <h3>Unordered</h3>
+    <ul>
+      <li>Nulla vel neque mattis, vestibulum nunc et, molestie diam.</li>
+      <li>Donec vitae sapien a elit faucibus venenatis et nec neque.</li>
+      <li>Nulla suscipit massa non neque consectetur, non blandit augue scelerisque.</li>
+      <li>Proin a augue eu neque malesuada cursus ut ac elit.</li>
+      <li>Suspendisse congue arcu vehicula sem imperdiet, quis dictum nulla ultricies.</li>
+    </ul>
+    
+  </div>
+
+  <div class="grid-12">
+  
+    <h3>Ordered</h3>
+    <ol>
+      <li>Nulla vel neque mattis, vestibulum nunc et, molestie diam.</li>
+      <li>Donec vitae sapien a elit faucibus venenatis et nec neque.</li>
+      <li>Nulla suscipit massa non neque consectetur, non blandit augue scelerisque.</li>
+      <li>Proin a augue eu neque malesuada cursus ut ac elit.</li>
+      <li>Suspendisse congue arcu vehicula sem imperdiet, quis dictum nulla ultricies.</li>
+    </ol>
+    
+  </div>
+  
 
 </article>
