--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -5,13 +5,11 @@
  * -------------------------------------------------------- */
 
 @import "core/config"
+$lang-front: left
 @import "core/mixin"
-
 @import "core/colors"
 
-
 @include color-swatches
-
 
 // CUSTOM FOR PREVIEW
 // ----------------------------
