--- a/assets/sass/grid-ie7.sass
+++ b/assets/sass/grid-ie7.sass
@@ -8,10 +8,9 @@
  *
  * -------------------------------------------------------- */
 
-
-
 @import "core/config"
 $ie7-support: true
+$lang-front: left
 @import "core/grid"
 
 // Clearfix
