--- a/assets/sass/grid.sass
+++ b/assets/sass/grid.sass
@@ -7,8 +7,9 @@
  *  Licensed under GPL and MIT.
  *
  * -------------------------------------------------------- */
-
+ 
 @import "core/config"
+$lang-front: left
 @import "core/grid"
 
 // Clearfix
