CSS for grid and grid-ie7 not rendering grid

--- a/lib/sass/grid-rtl.sass
+++ b/lib/sass/grid-rtl.sass
@@ -1,6 +1,6 @@
 /* --------------------------------------------------------
  *
- *  Centurion Framework v 3.5 - ALPHA RELEASE
+ *  Centurion Framework v 3.5
  *  Created by: Justin Hough (http://justinhough.com/)
  *
  *  Documentation: http://centurionframework.com/
