--- a/lib/sass/centurion.sass
+++ b/lib/sass/centurion.sass
@@ -1,6 +1,6 @@
 /* --------------------------------------------------------
  *
- *  Centurion Framework v 3.5 - ALPHA RELEASE
+ *  Centurion Framework v 3.5
  *  Created by: Justin Hough (http://justinhough.com/)
  *
  *  Documentation: http://centurionframework.com/
@@ -33,7 +33,6 @@ body
 @include float-elements
 
 @import "core/clearfix"
-
 
 // Visible and Show/Hide Classes
 .visible
