--- a/lib/sass/grid-ie7.scss
+++ b/lib/sass/grid-ie7.scss
@@ -1,33 +1,34 @@
 /* --------------------------------------------------------
  *
- *  Centurion Framework v 3.5 - GRID ONLY
+ *  Centurion Framework v 3.5 - IE7 GRID SUPPORT ONLY
  *  Created by: Justin Hough (http://justinhough.com/)
  *
  *  Documentation: http://centurionframework.com/
  *  Licensed under GPL and MIT.
  *
  * -------------------------------------------------------- */
- 
-@import "core/config"
-$lang-front: left
-@import "core/grid"
-
-@include column-grid
+@import "centurion";
+$ie7-support: true;
+$lang-front: left;
+@include column-grid;
 
 // Clearfix
-%clearfix
+%clearfix {
   &:before,
-  &:after
-    content: " "
-    display: table
-  &:after
-    clear: both
+  &:after {
+    content: " ";
+    display: table;
+  }
+  &:after {
+    clear: both;
+  }
+}
 
 .clearfix,
-.cf
-  @extend %clearfix
+.cf {
+  @extend %clearfix;
+}
 
-.clear
-  clear: both
-
-
+.clear {
+  clear: both;
+}
