--- a/source/layouts/index.html
+++ b/source/layouts/index.html
@@ -16,7 +16,7 @@
   <!-- build:include ../partials/_header.html --><!-- /build -->
 	
 	<section id="page-content" class="clearfix">
-		<div class="container">
+		<div class="ctn-container">
 		  <div class="post">
 
 
@@ -31,7 +31,7 @@
         <!-- content -->
 
 
-<div class="grid-18">
+<div class="ctn-grid-18">
     <h1>The Framework</h1>
 
     <img src="https://placeimg.com/250/320/tech/grayscale" alt="" class="lfloat frame visible hide-mobile">
@@ -41,7 +41,7 @@
   </div>
 
 
-  <div class="grid-6">
+  <div class="ctn-grid-6">
     <h2>Features</h2>
     <ul>
       <li>Responsive grid system
@@ -60,20 +60,20 @@
   </div>
 
 
-  <div class="grid-12">
+  <div class="ctn-grid-12">
     <h2>Code</h2>
-    <pre><code>&lt;div class="container"&gt;<br>
-&nbsp;&nbsp;&nbsp;&lt;div class="grid-16"&gt;<br>
+    <pre><code>&lt;div class="ctn-container"&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;div class="ctn-grid-16"&gt;<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;...<br>
 &nbsp;&nbsp;&nbsp; &lt;/div&gt;<br>
-&nbsp;&nbsp;&nbsp;&lt;div class="grid-8"&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;div class="ctn-grid-8"&gt;<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;...<br>
 &nbsp;&nbsp;&nbsp;&lt;/div&gt;<br>
 &lt;/div&gt;</code></pre>
   </div>
 
 
-  <div class="grid-12">
+  <div class="ctn-grid-12">
     <h2>Out of the Box</h2>
     <p>Ideally, Centurion wasn't meant to be the end of a theme, but rather it was meant to be beginning of a better one. Most of the features that exist within Centurion I have personally had to rebuild on most of the themes that I have worked on each time a new theme was created. I started working on Centurion to be the bridge between having to build mobile features into a theme, or even to have to build basic features, such as buttons, and text formats. Out of the box, Centurion is meant to speed up the development process.</p>
   </div>
