--- a/source/partials/_components/_navigation.html
+++ b/source/partials/_components/_navigation.html
@@ -1,5 +1,5 @@
 <a name="navigation"></a>
-<article class="grid-24">
+<article class="ctn-grid-24">
 
   <h2>Navigation</h2>
 
@@ -10,12 +10,12 @@
 
 
 <a name="___"></a>
-<article class="grid-24">
+<article class="ctn-grid-24">
 
   <h3>Breadcrumbs</h3>
   <p>______</p>
   
-  <div class="grid-12">
+  <div class="ctn-grid-12">
     
     <h3>Simple</h3>
     <ul class="breadcrumb">
@@ -34,7 +34,7 @@
     
   </div>
   
-  <div class="grid-12">
+  <div class="ctn-grid-12">
     
     <h3>Simple</h3>
     <ul class="breadcrumb">
@@ -59,7 +59,7 @@
 
   
 <a name="___"></a>
-<article class="grid-24">
+<article class="ctn-grid-24">
 
   <h3>Tabbed Structure</h3>
   <nav>
