--- a/source/partials/_components/_show-hide.html
+++ b/source/partials/_components/_show-hide.html
@@ -1,5 +1,5 @@
 <a name="show-hide"></a>
-<article class="grid-24">
+<article class="ctn-grid-24">
   <h2>Show / Hide for Desktop, Tablet, and Mobile</h2>
   <p>______</p>
   
