--- a/source/partials/_features/_badges.html
+++ b/source/partials/_features/_badges.html
@@ -1,9 +1,9 @@
 <a name="badges"></a>
-<article class="grid-24">
+<article class="ctn-grid-24">
   <h2>Badges</h2>
   <p>______</p>
   
-  <div class="grid-12">
+  <div class="ctn-grid-12">
     <h3>Default Badges</h3>
     <span class="badge">badge</span>
     <span class="badge red">badge red</span>
@@ -59,7 +59,7 @@
     <div class="clear"></div>
   </div>
 
-  <div class="grid-12">
+  <div class="ctn-grid-12">
     <h3>Border Only Badges</h3>
     <span class="badge border">badge</span>
     <span class="badge border red">badge red</span>
