--- a/source/partials/_features/_buttons.html
+++ b/source/partials/_features/_buttons.html
@@ -1,10 +1,10 @@
 <a name="buttons"></a>
-<article class="grid-24">
+<article class="ctn-grid-24">
 
   <h2>Buttons</h2>
   <p>______</p>
 
-  <div class="grid-8">
+  <div class="ctn-grid-8">
     
     <h3>Default</h3>
     <p><a href="#" class="small-btn inline-btn">Small Grey</a></p>
@@ -18,7 +18,7 @@
     
   </div>
   
-  <div class="grid-8">
+  <div class="ctn-grid-8">
     <h3>Blue</h3>
     <p><a href="#" class="blue-btn inline-btn">Regular Blue</a></p>
     <pre><code>class="blue-btn"</code></pre>
@@ -28,7 +28,7 @@
     <pre><code>class="orange-btn"</code></pre>
   </div>
   
-  <div class="grid-8">
+  <div class="ctn-grid-8">
     <h3>Red</h3>
     <p><a href="#" class="red-btn inline-btn">Regular Red</a></p>
     <pre><code>class="red-btn"</code></pre>
