--- a/source/partials/_features/_callouts.html
+++ b/source/partials/_features/_callouts.html
@@ -1,9 +1,9 @@
-<article class="grid-24">
+<article class="ctn-grid-24">
   <h2>Callouts</h2>
   
   <p>also known as frame boxes, alerts, etc.</p>
 
-  <div class="grid-12">
+  <div class="ctn-grid-12">
     <h3>Expandable Callouts</h3>
     
     <div class="callout alert">
@@ -44,7 +44,7 @@
     </div>
   </div>
 
-  <div class="grid-12">
+  <div class="ctn-grid-12">
     <h3>General Callouts</h3>
     
     <div class="blue-callout">
