--- a/source/partials/_features/_colors.html
+++ b/source/partials/_features/_colors.html
@@ -1,9 +1,9 @@
 <a name="colors"></a>
-<article id="colors" class="grid-24 alpha">
+<article id="colors" class="ctn-grid-24 alpha">
   <h2>Colors</h2>
   <p>______</p>
   
-  <div class="grid-12">
+  <div class="ctn-grid-12">
 
     <!-- BLACK and GREYS -->
     <div data-color="black"></div>
@@ -26,7 +26,7 @@
     
   </div>
 
-  <div class="grid-12">
+  <div class="ctn-grid-12">
     <!-- PURPLE -->
     <div data-color="purple"></div>
     <div data-color="dark-purple"></div>
