--- a/source/partials/_features/_tables.html
+++ b/source/partials/_features/_tables.html
@@ -1,10 +1,10 @@
-<article class="grid-24">
+<article class="ctn-grid-24">
   <h2>Tables</h2>
   
   <p>You know you hate building table after table styles. You can now use the default tables built into Centurion to fit your color scheme.</p>
   <p>By default the table styles that Centurion uses work out of the box. Create a table and it works with the default grey. To change colors you can specify your own or you can use the ones that come pre-packed based on the <a href="#colors">color scheme</a> above.</p>
 
-  <div class="grid-12">
+  <div class="ctn-grid-12">
   
     <h3>Default Table</h3>
     <p><pre><code> &lt;table&gt; </code></pre></p>
@@ -115,7 +115,7 @@
     
   </div>
   
-  <div class="grid-12">
+  <div class="ctn-grid-12">
   
     <h3>Red Table</h3>
     <p><pre><code> &lt;table class="red-table striped-table"&gt; </code></pre></p>
