--- a/source/partials/_features/_typography.html
+++ b/source/partials/_features/_typography.html
@@ -1,10 +1,10 @@
 <a name="typography"></a>
-<article class="grid-24">
+<article class="ctn-grid-24">
   
   <h2>Typography</h2>
   <p>______</p>
   
-  <div class="grid-8">
+  <div class="ctn-grid-8">
     <h1>h1. Standard h1</h1>
     <h2>h2. Standard h2</h2>
     <h3>h3. Standard h3</h3>
@@ -13,7 +13,7 @@
     <h6>h6. Standard h6</h6>
   </div>
 
-  <div class="grid-16">
+  <div class="ctn-grid-16">
 
     <p class="text-large">Lorem ipsum dolor sit amet, emphasis consectetuer adipiscing elit. Nullam dignissim convallis est. Quisque aliquam. Donec faucibus. Nunc iaculis suscipit dui. Nam sit amet sem. Aliquam libero nisi, imperdiet at, tincidunt nec, gravida vehicula, nisl.</p>
     
@@ -26,11 +26,11 @@
   </div>
 
 
-  <div class="grid-24">
+  <div class="ctn-grid-24">
     <h2>Blockquotes</h2>
   </div>
   
-  <div class="grid-12">
+  <div class="ctn-grid-12">
     
     <h3>Simple</h3>
     <blockquote>
@@ -45,7 +45,7 @@
     
   </div>
 
-  <div class="grid-12">
+  <div class="ctn-grid-12">
     
     <h3>With Quotes</h3>
     <blockquote class="quote">
@@ -56,11 +56,11 @@
   </div>
 
 
-  <div class="grid-24">
+  <div class="ctn-grid-24">
     <h2>Lists</h2>
   </div>
   
-  <div class="grid-12">
+  <div class="ctn-grid-12">
     
     <h3>Unordered</h3>
     <ul>
@@ -73,7 +73,7 @@
     
   </div>
 
-  <div class="grid-12">
+  <div class="ctn-grid-12">
   
     <h3>Ordered</h3>
     <ol>
