--- a/source/partials/_grid/_general-grid.html
+++ b/source/partials/_grid/_general-grid.html
@@ -1,4 +1,4 @@
-<div class="grid-24 no-display-grid">
+<div class="ctn-grid-24 no-display-grid">
   <h1>The Grid</h1>
   <p>This is a page to show how the grid layout functions.</p>
 </div>
@@ -6,43 +6,43 @@
 
 <section class="calculate clearfix">
 
-  <div class="grid-24"></div>
+  <div class="ctn-grid-24"></div>
   
 <!--
-  <div class="grid-1"></div>
-  <div class="grid-23"></div>
+  <div class="ctn-grid-1"></div>
+  <div class="ctn-grid-23"></div>
 -->
   
-  <div class="grid-2"></div>
-  <div class="grid-22"></div>
+  <div class="ctn-grid-2"></div>
+  <div class="ctn-grid-22"></div>
   
-  <div class="grid-3"></div>
-  <div class="grid-21"></div>
+  <div class="ctn-grid-3"></div>
+  <div class="ctn-grid-21"></div>
   
-  <div class="grid-4"></div>
-  <div class="grid-20"></div>
+  <div class="ctn-grid-4"></div>
+  <div class="ctn-grid-20"></div>
   
-  <div class="grid-5"></div>
-  <div class="grid-19"></div>
+  <div class="ctn-grid-5"></div>
+  <div class="ctn-grid-19"></div>
   
-  <div class="grid-6"></div>
-  <div class="grid-18"></div>
+  <div class="ctn-grid-6"></div>
+  <div class="ctn-grid-18"></div>
   
-  <div class="grid-7"></div>
-  <div class="grid-17"></div>
+  <div class="ctn-grid-7"></div>
+  <div class="ctn-grid-17"></div>
   
-  <div class="grid-8"></div>
-  <div class="grid-16"></div>
+  <div class="ctn-grid-8"></div>
+  <div class="ctn-grid-16"></div>
   
-  <div class="grid-9"></div>
-  <div class="grid-15"></div>
+  <div class="ctn-grid-9"></div>
+  <div class="ctn-grid-15"></div>
   
-  <div class="grid-10"></div>
-  <div class="grid-14"></div>
+  <div class="ctn-grid-10"></div>
+  <div class="ctn-grid-14"></div>
   
-  <div class="grid-11"></div>
-  <div class="grid-13"></div>
+  <div class="ctn-grid-11"></div>
+  <div class="ctn-grid-13"></div>
   
-  <div class="grid-12"></div>
-  <div class="grid-12"></div>
+  <div class="ctn-grid-12"></div>
+  <div class="ctn-grid-12"></div>
 </section>
