--- a/source/partials/_header.html
+++ b/source/partials/_header.html
@@ -1,6 +1,6 @@
 <header>
-  <div class="container">
-    <div class="grid-24">
+  <div class="ctn-container">
+    <div class="ctn-grid-24">
       
       <h1><%= site_title %> <small>(<%= version %></small>)</h1>
       <nav id="main" class="mobile">
@@ -19,8 +19,8 @@
 
 
 <section id="banner" class="home">
-  <div class="container">
-    <div class="grid-24">
+  <div class="ctn-container">
+    <div class="ctn-grid-24">
       
       <h1><!-- $banner-title --></h1>
       
