--- a/source/layouts/grid.html
+++ b/source/layouts/grid.html
@@ -17,7 +17,7 @@
   <!-- build:include ../partials/_header.html --><!-- /build -->
 	
 	<section id="page-content" class="clearfix">
-		<div class="container">
+		<div class="ctn-container">
 		  <div class="post">
 
 
