--- a/source/partials/_footer.html
+++ b/source/partials/_footer.html
@@ -1,10 +1,10 @@
 <!-- Footer -->
 <footer>
-  <div class="container">
-    <div class="grid-18">
+  <div class="ctn-container">
+    <div class="ctn-grid-18">
       <p><%= site_title %> was created by <a href="http://www.justinhough.com" title="Justin Hough">Justin Hough</a>.</p>
     </div>
-    <div class="grid-6">
+    <div class="ctn-grid-6">
       <p>Licensed under <a href="http://www.gnu.org/licenses/gpl.html" rel="license">GPL</a> and 
         <a href="http://www.opensource.org/licenses/mit-license.php" rel="license">MIT</a>.</p>
     </div>
