`@import` pointed to centurion-framework (issue found in ruby gem and NPM)

--- a/lib/sass/grid-ie7.scss
+++ b/lib/sass/grid-ie7.scss
@@ -7,7 +7,7 @@
  *  Licensed under GPL and MIT.
  *
  * -------------------------------------------------------- */
-@import "centurion";
+@import "centurion-framework";
 $ie7-support: true;
 $lang-front: left;
 @include column-grid;
