--- a/lib/sass/grid-rtl.scss
+++ b/lib/sass/grid-rtl.scss
@@ -7,7 +7,7 @@
  *  Licensed under GPL and MIT.
  *
  * -------------------------------------------------------- */
-@import "centurion";
+@import "centurion-framework";
 $lang-front: right;
 
 body {
