--- a/lib/sass/custom.scss
+++ b/lib/sass/custom.scss
@@ -4,7 +4,7 @@
  *
  * -------------------------------------------------------- */
 
-@import "centurion";
+@import "centurion-framework";
 $lang-front: left;
 
 @include color-swatches;
