Demo - adjusting classes for new prefixed usage

--- a/source/partials/_grid/_center-grid.html
+++ b/source/partials/_grid/_center-grid.html
@@ -5,11 +5,11 @@
 
 <section class="calculate clearfix">
   
-  <div class="ctn-grid-2 grid-center"></div>
-  <div class="ctn-grid-4 grid-center"></div>
-  <div class="ctn-grid-6 grid-center"></div>
-  <div class="ctn-grid-8 grid-center"></div>
-  <div class="ctn-grid-10 grid-center"></div>
-  <div class="ctn-grid-12 grid-center"></div>
+  <div class="ctn-grid-2 ctn-grid-center"></div>
+  <div class="ctn-grid-4 ctn-grid-center"></div>
+  <div class="ctn-grid-6 ctn-grid-center"></div>
+  <div class="ctn-grid-8 ctn-grid-center"></div>
+  <div class="ctn-grid-10 ctn-grid-center"></div>
+  <div class="ctn-grid-12 ctn-grid-center"></div>
   
 </section>
