--- a/source/partials/_grid/_push-pull-grid.html
+++ b/source/partials/_grid/_push-pull-grid.html
@@ -1,10 +1,4 @@
 <div class="ctn-grid-24">
-  <h2>Nested Grids</h2>
-  <p>_____</p>
-</div>
-
-
-<div class="ctn-grid-24">
   <h3>Push the Grid</h3>
 </div>
 
@@ -13,13 +7,13 @@
   <div class="ctn-grid-6"></div>
   <div class="clear"></div>
   
-  <div class="ctn-grid-6 push-6"></div>
+  <div class="ctn-grid-6 ctn-push-6"></div>
   <div class="clear"></div>
   
-  <div class="ctn-grid-6 push-12"></div>
+  <div class="ctn-grid-6 ctn-push-12"></div>
   <div class="clear"></div>
   
-  <div class="ctn-grid-6 push-18"></div>
+  <div class="ctn-grid-6 ctn-push-18"></div>
   <div class="clear"></div>
 
 </section>
@@ -31,9 +25,9 @@
 
 <section class="calculate clearfix">  
 
-  <div class="ctn-grid-6 push-6"></div>  
-  <div class="ctn-grid-6 pull-6"></div>
-  <div class="ctn-grid-6 push-6"></div>
-  <div class="ctn-grid-6 pull-6"></div>
+  <div class="ctn-grid-6 ctn-push-6"></div>  
+  <div class="ctn-grid-6 ctn-pull-6"></div>
+  <div class="ctn-grid-6 ctn-push-6"></div>
+  <div class="ctn-grid-6 ctn-pull-6"></div>
 
 </section>
